@@ -9,7 +9,7 @@ IMPORTANT NOTICE:
 
 If you are a user of PyTables, it needs your help to keep going.  Please
 read the next thread as it contains important information about the
-future of the project:
+future (or lack of it) of the project:
 
 https://groups.google.com/forum/#!topic/pytables-users/yY2aUa4H7W4
 
@@ -21,9 +21,10 @@ What's new
 ==========
 
 This is a major release of PyTables and it is the result of more than a
-year of accumulated patches, but most specially it fixes a nasty problem
-with indexed queries not returning the correct results in some
-scenarios.  There are many usablity and performance improvements too.
+year of accumulated patches, but most specially it fixes a couple of
+nasty problem with indexed queries not returning the correct results in
+some scenarios.  There are many usablity and performance improvements
+too.
 
 In case you want to know more in detail what has changed in this
 version, please refer to: http://pytables.github.io/release_notes.html
