@@ -59,6 +59,7 @@ Release timeline
 ----------------
 
 =============== =========== ==========
+PyTables        3.2.0rc2    2015-05-01
 PyTables        3.2.0rc1    2015-04-21
 PyTables        3.1.1       2014-03-25
 PyTables        3.1.0       2014-02-05
